# homepage

./: .gitignore  404.md  LICENSE  aboutme.md  acads.md  book-reviews.md  build-clippings.sh  build-review.sh  clippings.md  contact.md  cv.html  episteme.md  homepage.cabal  index.html  linkextract.hs  new_post.sh  projects.md  publications.md  recommendations.md  research.md  resume.html  site.hs  sync.sh
css/: base.css  layout.css  style.css
fonts/: icomoon.eot  rejuvyesh-homepage.eot  rejuvyesh-symbols.eot
javascripts/: content.js  footnotes-min.js  footnotes.js  table.js
notes/: localized-translation-axons.md  lz77.md  machine-learning.md
posts/: 2012-02-06-art-of-fooling.md  2013-02-16-on-nihilism.md  2013-03-02-where-is-the-time.md  2013-03-07-why-is-"reading"-more-respected-than-"tv".md  2013-03-07-why-is-reading-more-respected-than-tv.md  2013-03-08-the-infinite-why-regress.md  2013-04-09-get-cooler-post-title.md  2013-05-12-bakemonogatari.md  2013-11-20-the-common-cold.md  2013-11-24-introduction-to-biclustering.md  2013-12-13-cross-compile-matlab-mex-files-on-linux.md  2014-06-29-where-i-rant-about-steve-jobs.md  2014-08-27-the-scientific-and-rational-tenor-of-srimad-bhagwad-gita.md  2014-09-18-my-rules-for-interacting-with-people.md  2014-11-29-tracking-unproductivity.md  2015-01-03-year-2014-shutting-down.md  2015-01-05-understanding-theory-of-mutation-and-fitness.md
scss/: _base.scss  _parts.scss
src/: site.hs
templates/: browse.html  clippings.md  comments.html  default.html  note.html  notes.html  post.html  postitem.html  posts.html  review.md
(+9 files in other folders)
