name:                homepage
version:             0.1.1.0
synopsis:            Personal Blog and Homepage of Jayesh Kumar Gupta
-- description:         
homepage:            http://rejuvyesh.com
license:             MIT
license-file:        LICENSE
author:              rejuvyesh
maintainer:          mail@rejuvyesh.com
-- copyright:           
category:            Web
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10

executable homepage
  main-is:             site.hs
  ghc-options:    -O2 -Wall -threaded
  Hs-source-dirs:      src
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base         == 4.*,
                       pandoc       >= 1.12,
                       filepath     >= 1.3.0.0,
                       process      >= 1.1.0.2,
                       cryptohash   >= 0.8.4,
                       pandoc-types >= 1.12,
                       hakyll       >= 4.2.2.0
  -- hs-source-dirs:      
  default-language:    Haskell2010